abstracted type of state label and refactored
Signed-off-by: Davide Basile <davide.basile@isti.cnr.it>